--- a/src/frontend/styl/theme.styl
+++ b/src/frontend/styl/theme.styl
@@ -3,3 +3,45 @@ body {
 	font-size: 16px;
 	font-family: 'Raleway', 'arial';
 }
+
+button {
+	
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    font-weight: normal;
+    text-align: center;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    background-image: none;
+    border: 1px solid transparent;
+    white-space: nowrap;
+    padding: 10px 18px;
+    font-size: 15px;
+    line-height: 1.42857143;
+    border-radius: 0;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.btn-primary {
+    color: #ffffff;
+    background-color: #2780e3;
+    border-color: #2780e3;
+}
+
+.btn-primary-2 {
+    color: #ffffff;
+    background-color: #0099FF;
+    border-color: #0099FF;
+}
+
+.btn-download {
+    padding: 0px 0px;
+}
