Session api was made

--- a/src/frontend/styl/index.styl
+++ b/src/frontend/styl/index.styl
@@ -141,7 +141,7 @@ footer .flex-content {
     justify-content: space-around;
 }
 
-footer .author {
+footer .author a {
     color: #69C3FF;
     padding-top: 10px;
 }
